finishing touches on resizing

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark navbar-fixed-top" style="background-color:#0069AA;color:#FFFFFF;">
   <div class="container-fluid">
+    <div id="navbar-brand">
     <a class="navbar-brand" href="#"><img id="logo" src="pictures/acmwlogo.jpg"></a>
+    </div>
     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -95,7 +97,7 @@
 </div>
 </section>
 
-<section>
+<section style="background:#f8f9fa;">
 <div id="about">
 <h2 class="heading">2020-2021 Executive Board</h2>
 
@@ -123,9 +125,9 @@
 </div>
 
 <div class="card">
-  <img src="pictures/carrie.jpg" class="card-img-top">
+  <img src="pictures/disha.jpg" class="card-img-top">
   <div class="card-body">
-    <h5 class="card-title">Caroline Graham</h5>
+    <h5 class="card-title">Disha Thakar</h5>
     <p class="card-text">Treasurer</p>
   </div>
   <ul class="list-group list-group-flush">
